<resources>
    <string name="app_name">地大签行</string>
    <string name="slogan">轻松签到，安心出行</string>
    <string name="btn_send">发送</string>
    <string name="Monitor">出行监测</string>
    <string name="Tool">课程签到</string>
    <string name="Setting">设置</string>
    <string name="load_image">上传签到</string>
    <string name="TaskList">任务列表</string>
    <string name="Analyze">课程签到</string>
    <string name="FootstepCounter">计步器</string>
    <string name="start_monitor">start monitor</string>
    <string name="image1_text">the first frame</string>
    <string name="image1_text2">the second frame</string>
    <string name="FoodIdentifyer">食物识别</string>
    <string name="About">关于</string>
    <string name="TrainingPlan">锻炼计划</string>
    <string name="Step">步数</string>
    <string name="start_place_hint">Input your end place</string>
    <string name="input_hint_end">Input your end place</string>
    <string name="Time">时间</string>
    <string name="Target">每日目标</string>
    <string name="Remind">提醒</string>
    <string name="RemindTime">提醒时间</string>
    <string name="Save">保存</string>
    <string name="HistoryRecord">历史记录</string>
    <string name="introduce">说明</string>
    <string name="title">标题</string>
    <string name="summary">内容</string>
    <string name="StudentNumber">学号</string>
    <string name="Login">登录</string>
    <string name="Register">注册</string>
    <string name="Guest">游客</string>
    <string name="Account">账号</string>
    <string name="AccountHint">班级序号</string>
    <string name="ConfirmPwd">确认密码</string>
    <string name="RememberPwd">记住密码</string>
    <string name="ModifyPwd">修改密码</string>
    <string name="AutoLogIn">自动登录</string>
    <string name="VisitorHint">还不想登录或注册？点此以游客身份进入</string>
    <string name="month">个月</string>
    <string name="week">周</string>
    <string name="day">天</string>
    <string name="Age">年龄(岁)</string>
    <string name="Height">身高(cm)</string>
    <string name="Weight">体重(kg)</string>
    <string name="OGTT">空腹血糖(mmol/L)</string>
    <string name="input_hint">点击输入</string>
    <string name="RecordHint">记录您现在的指数</string>
    <string name="ConfirmAnalyse">开始分析</string>
    <string name="ShowAnalyseResult">检测结果</string>
    <string name="normal_msg">您患病的几率较小，建议按实际情况及时检查血糖水平变化，如有情况改变去医院做进一步检查</string>
    <string name="normal">正常</string>
    <string name="GDM_msg">您患病的几率较大，建议去医院做进一步检查以确定</string>
    <string name="GDM">妊娠期糖尿病</string>
    <string name="accuracy">准确度</string>
    <string name="InvalidInput">年龄、身高、体重、空腹血糖不能为空</string>
    <string name="thinking">大数据分析中...</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="historySteps">查看历史步数</string>
    <string name="setTrainingPlan">设置锻炼计划</string>
    <string name="deviceSupport">该设备支持计步</string>
    <string name="counting">计步中...</string>
    <string name="invlid_stunumber">输入的学号长度不正确</string>
    <string name="null_hint">账号或密码不能为空</string>
    <string name="not_equal_hint">两次输入的密码需保持一致</string>
    <string name="account_invalid_hint">输入的班级序列长度不够</string>
    <string name="no_record">无记录</string>
    <string name="Center">个人中心</string>
    <string name="Username">用户名</string>
    <string name="Logout">注销</string>
    <string name="Exit">退出</string>
    <string name="modify_hint">点击修改</string>
    <string name="checkHistory">我的历史检测记录</string>
    <string name="Nickname">昵称</string>
    <string name="Birth">生日</string>
    <string name="old_pwd_hint">请输入原密码</string>
    <string name="new_pwd_hint">请输入新密码</string>
    <string name="modify_not_null">原密码、新密码、确认密码均不能为空</string>
    <string name="modify_not_equal">确认密码需与新密码保持一致</string>
    <string name="modify_not_right">原密码错误</string>
    <string name="modify_success">修改成功</string>
    <string name="stepHint">适当锻炼对宝宝有好处哦~</string>
    <string name="pregnantDate_hint">请选择您最近一次月经时间</string>
    <string name="birthDate_hint">请选择您的出生日期</string>
    <string name="next">下一步</string>
    <string name="finish">完成设置</string>
    <string name="uploadAvatar">上传头像</string>
    <string name="takePhoto">拍照</string>
    <string name="chooseFromGallery">从相册选择</string>
    <string name="exit_hint">再按一次退出程序</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="pregnant_hint">您是否已经怀孕？</string>
    <string name="version">当前版本 1.0</string>
    <string name="update">检查更新</string>
    <string name="title_activity_show_location">Show_location</string>
    <string name="title_activity_show_speech">Show_speech</string>
    <string name="title_activity_get_frame">getFrame</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
